[package]
name = "ynab-api"
version = "3.0.0"
authors = ["Jesse Luehrs <doy@tozt.net>", "You Need A Budget, LLC"]
description = "OpenAPI-generated API bindings for the YNAB API"
repository = "https://git.tozt.net/ynab-api"
license = "Apache-2.0"


[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = "~0.9"

[dev-dependencies]
